Kubernetes/flag-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flag-deploy
  namespace: flag-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flag-service # < - deploy ira gerenciar container com essa label Linhas 20
  template:
    metadata:
      labels:
        app: flag-service # < - tag do container
    spec:
      containers:
      - name: flag-service
        image: 432698115448.dkr.ecr.us-east-1.amazonaws.com/flag-service:4025ca7
        ports:
        - containerPort: 8002 # <- apenas indica na documentação
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "1"
            memory: "1Gi"
        livenessProbe:
          httpGet:
            path: /health
            port: 8002
          initialDelaySeconds: 10
          periodSeconds: 30
