Kubernetes/flag-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flag-service-clusterip
  namespace: flag-service
spec:
  selector:
    app: flag-service
  type: ClusterIP
  ports:
  - port: 8002
    targetPort: 8002
