Kubernetes/flag-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flag-ingress
  namespace: flag-service   # mesmo namespace do Service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /flag(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: flag-service-clusterip
            port:
              number: 8002
